5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4009/executions/1671_1103.log
== SUBMITION (2019-04-29 23:35:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("x: "))
a = float(input("a: "))
b = float(iput("b: "))

if (b > a):
	if (a <= x) and (x <= b):
		print(x ," pertence ao intervalo", a,",", b)
	else: 
		print(x ," nao pertence ao intervalo", a,",", b)
else: 
	print("Entradas", a,"e", b, "invalidas")
-- EXECUTION TIME:
0.18767
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1103/main.py", line 6, in <module>
    b = float(iput("b: "))
NameError: name 'iput' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 23:35:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("x: "))
a = float(input("a: "))
b = float(iput("b: "))

if (b > a):
	if (a <= x) and (x <= b):
		print(x ," pertence ao intervalo", a,",", b)
	else: 
		print(x ," nao pertence ao intervalo", a,",", b)
else: 
	print("Entradas", a,"e", b, "invalidas")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    b = float(iput("b: "))
NameError: name 'iput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 23:38:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("x: "))
a = float(input("a: "))
b = float(iput("b: "))

if (b > a):
	if (a <= x) and (x <= b):
		print(x ," pertence ao intervalo", a,",", b)
	else: 
		print(x ," nao pertence ao intervalo", a,",", b)
else: 
	print("Entradas", a,"e", b, "invalidas")
-- EXECUTION TIME:
0.153721
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1103/main.py", line 6, in <module>
    b = float(iput("b: "))
NameError: name 'iput' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 23:38:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

print("Intervalo 1:", a,",", b)
print("Intervalo 2:", c,",", d)

if (b > a) and (d >c):
	if(c >= a) and (c <= b) or (d >= a) and (d <= b): 
		print("Ha intersecao")
	else: 
		print("Nao ha intersecao")
else: 
	print("Entradas invalidas")
-- EXECUTION TIME:
0.226102
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1103/main.py", line 7, in <module>
    d = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 23:39:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("x: "))
a = float(input("a: "))
b = float(iput("b: "))

if (b > a):
	if (a <= x) and (x <= b):
		print(x ," pertence ao intervalo", a,",", b)
	else: 
		print(x ," nao pertence ao intervalo", a,",", b)
else: 
	print("Entradas", a,"e", b, "invalidas")
-- EXECUTION TIME:
0.153175
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1103/main.py", line 6, in <module>
    b = float(iput("b: "))
NameError: name 'iput' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 23:40:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("x: "))
a = float(input("a: "))
b = float(iput("b: "))

if (b > a):
	if (a <= x) and (x <= b):
		print(x ," pertence ao intervalo", a,",", b)
	else: 
		print(x ," nao pertence ao intervalo", a,",", b)
else: 
	print("Entradas", a,"e", b, "invalidas")
-- EXECUTION TIME:
0.209031
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1103/main.py", line 6, in <module>
    b = float(iput("b: "))
NameError: name 'iput' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 23:41:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("x: "))
a = float(input("a: "))
b = float(iput("b: "))

if (b > a):
	if (a <= x) and (x <= b):
		print(x ," pertence ao intervalo", a,",", b)
	else: 
		print(x ," nao pertence ao intervalo", a,",", b)
else: 
	print("Entradas", a,"e", b, "invalidas")
-- EXECUTION TIME:
0.141511
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1103/main.py", line 6, in <module>
    b = float(iput("b: "))
NameError: name 'iput' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 23:41:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("x: "))
a = float(input("a: "))
b = float(iput("b: "))

if (b > a):
	if (a <= x) and (x <= b):
		print(x ," pertence ao intervalo", a,",", b)
	else: 
		print(x ," nao pertence ao intervalo", a,",", b)
else: 
	print("Entradas", a,"e", b, "invalidas")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    b = float(iput("b: "))
NameError: name 'iput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 23:41:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("x: "))
a = float(input("a: "))
b = float(iput("b: "))

if (b > a):
	if (a <= x) and (x <= b):
		print(x ," pertence ao intervalo", a,",", b)
	else: 
		print(x ," nao pertence ao intervalo", a,",", b)
else: 
	print("Entradas", a,"e", b, "invalidas")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    b = float(iput("b: "))
NameError: name 'iput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 23:41:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("x: "))
a = float(input("a: "))
b = float(iput("b: "))

if (b > a):
	if (a <= x) and (x <= b):
		print(x ," pertence ao intervalo", a,",", b)
	else: 
		print(x ," nao pertence ao intervalo", a,",", b)
else: 
	print("Entradas", a,"e", b, "invalidas")
-- EXECUTION TIME:
0.128548
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1103/main.py", line 6, in <module>
    b = float(iput("b: "))
NameError: name 'iput' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
